manifests-prod/service.yml
apiVersion: v1
kind: Service
metadata:
  name: prod-service
spec:
  type: ClusterIP
  selector:
    app: prod-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
